# Computer-Vision

./: .gitignore  README.md
images/hendrix/: postermod.pgm  simple.pgm
images/imagenesL3/: reco1.pgm
practica1/: .clang-format  .gitignore  App.cpp  CMakeLists.txt  CameraBlur.cpp  CameraBlur2.cpp  EnhancedWindow.h  Filters.cpp  Filters.h
practica2/: .clang-format  CMakeLists.txt  Edges.cpp  canny_operator.cpp  canny_operator.hpp  cvui.h  kernel_test.cpp  main.cpp  ransac.cpp  ransac.hpp  vanishing_points.cpp  vanishing_points.hpp
practica3/: .clang-format  .gitignore  CMakeLists.txt  aprender.cpp  aprender.sh  bayes_classifier.cpp  bayes_classifier.hpp  build.sh  confusion_matrix.py  descriptors.cpp  descriptors.hpp  mahalanobis_classifier.cpp  mahalanobis_classifier.hpp  main.cpp  reconocer.cpp  utils.cpp  utils.h  writer.cpp  writer.h
practica4/: AKAZEPair.cpp  AKAZEPair.h  CMakeLists.txt  Chessboard.cpp  Keypoints.cpp  Pair.h  Panorama.cpp  Panorama.h  Ransac.cpp  Ransac.h  SIFTPair.cpp  SIFTPair.h  main.cpp
practica4/detectors/: AKAZEPair.cpp  AKAZEPair.h  CMakeLists.txt  HARRISPair.cpp  HARRISPair.h  ORBPair.cpp  ORBPair.h  Pair.cpp  Pair.h  SIFTPair.cpp  SIFTPair.h  SURFPair.cpp  SURFPair.h
